--- a/.gitignore
+++ b/.gitignore
@@ -196,3 +196,5 @@ proj.win32/
 /proj.win32/engine/external/chipmunk/ALL_BUILD.vcxproj
 /proj.win32/engine/external/ConvertUTF/ext_convertUTF.vcxproj.filters
 /proj.win32/engine/external/ConvertUTF/ext_convertUTF.vcxproj
+/proj.win32/Lemmings.vcxproj.filters
+/proj.win32/Lemmings.vcxproj
