--- a/proj.win32/Lemmings.vcxproj
+++ b/proj.win32/Lemmings.vcxproj
@@ -117,7 +117,8 @@
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <PostBuildEvent>
-      <Message>												</Message>
+      <Message>
+      </Message>
       <Command>setlocal
 "C:\Program Files\CMake\bin\cmake.exe" -E copy_if_different S:/~/Lemmings/Lemmings/cocos2d/external/openssl/prebuilt/win32/libssl-1_1.dll S:/~/Lemmings/Lemmings/proj.win32/bin/Lemmings/Debug/libssl-1_1.dll
 if %errorlevel% neq 0 goto :cmEnd
@@ -283,7 +284,8 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <PostBuildEvent>
-      <Message>												</Message>
+      <Message>
+      </Message>
       <Command>setlocal
 "C:\Program Files\CMake\bin\cmake.exe" -E copy_if_different S:/~/Lemmings/Lemmings/cocos2d/external/openssl/prebuilt/win32/libssl-1_1.dll S:/~/Lemmings/Lemmings/proj.win32/bin/Lemmings/Release/libssl-1_1.dll
 if %errorlevel% neq 0 goto :cmEnd
@@ -449,7 +451,8 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <PostBuildEvent>
-      <Message>												</Message>
+      <Message>
+      </Message>
       <Command>setlocal
 "C:\Program Files\CMake\bin\cmake.exe" -E copy_if_different S:/~/Lemmings/Lemmings/cocos2d/external/openssl/prebuilt/win32/libssl-1_1.dll S:/~/Lemmings/Lemmings/proj.win32/bin/Lemmings/MinSizeRel/libssl-1_1.dll
 if %errorlevel% neq 0 goto :cmEnd
@@ -614,7 +617,8 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <PostBuildEvent>
-      <Message>												</Message>
+      <Message>
+      </Message>
       <Command>setlocal
 "C:\Program Files\CMake\bin\cmake.exe" -E copy_if_different S:/~/Lemmings/Lemmings/cocos2d/external/openssl/prebuilt/win32/libssl-1_1.dll S:/~/Lemmings/Lemmings/proj.win32/bin/Lemmings/RelWithDebInfo/libssl-1_1.dll
 if %errorlevel% neq 0 goto :cmEnd
@@ -885,6 +889,9 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <Project>{817EBD12-C8EA-3C62-AED7-E9508746DA5C}</Project>
       <Name>external</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Resources\sprites\lemmings.plist" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
