--- a/Resources/sprites/lemmings.plist
+++ b/Resources/sprites/lemmings.plist
@@ -9,120 +9,168 @@
                 <key>aliases</key>
                 <array/>
                 <key>spriteOffset</key>
-                <string>{0,0}</string>
+                <string>{0,-0.5}</string>
                 <key>spriteSize</key>
-                <string>{16,16}</string>
+                <string>{6,11}</string>
                 <key>spriteSourceSize</key>
                 <string>{16,16}</string>
                 <key>textureRect</key>
-                <string>{{0,0},{16,16}}</string>
+                <string>{{29,15},{6,11}}</string>
                 <key>textureRotated</key>
                 <false/>
+                <key>triangles</key>
+                <string>1 2 3 0 1 3</string>
+                <key>vertices</key>
+                <string>11 14 5 14 5 3 11 3</string>
+                <key>verticesUV</key>
+                <string>35 26 29 26 29 15 35 15</string>
             </dict>
             <key>walk/0002.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
                 <key>spriteOffset</key>
-                <string>{0,0}</string>
+                <string>{0.5,0}</string>
                 <key>spriteSize</key>
-                <string>{16,16}</string>
+                <string>{7,12}</string>
                 <key>spriteSourceSize</key>
                 <string>{16,16}</string>
                 <key>textureRect</key>
-                <string>{{16,0},{16,16}}</string>
+                <string>{{20,1},{7,12}}</string>
                 <key>textureRotated</key>
                 <false/>
+                <key>triangles</key>
+                <string>1 2 3 0 1 3</string>
+                <key>vertices</key>
+                <string>12 14 5 14 5 2 12 2</string>
+                <key>verticesUV</key>
+                <string>27 13 20 13 20 1 27 1</string>
             </dict>
             <key>walk/0003.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
                 <key>spriteOffset</key>
-                <string>{0,0}</string>
+                <string>{0,-0.5}</string>
                 <key>spriteSize</key>
-                <string>{16,16}</string>
+                <string>{8,11}</string>
                 <key>spriteSourceSize</key>
                 <string>{16,16}</string>
                 <key>textureRect</key>
-                <string>{{32,0},{16,16}}</string>
+                <string>{{1,14},{8,11}}</string>
                 <key>textureRotated</key>
                 <false/>
+                <key>triangles</key>
+                <string>1 2 3 0 1 3</string>
+                <key>vertices</key>
+                <string>12 14 4 14 4 3 12 3</string>
+                <key>verticesUV</key>
+                <string>9 25 1 25 1 14 9 14</string>
             </dict>
             <key>walk/0004.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
                 <key>spriteOffset</key>
-                <string>{0,0}</string>
+                <string>{-0.5,-0.5}</string>
                 <key>spriteSize</key>
-                <string>{16,16}</string>
+                <string>{7,11}</string>
                 <key>spriteSourceSize</key>
                 <string>{16,16}</string>
                 <key>textureRect</key>
-                <string>{{48,0},{16,16}}</string>
+                <string>{{20,15},{7,11}}</string>
                 <key>textureRotated</key>
                 <false/>
+                <key>triangles</key>
+                <string>1 2 3 0 1 3</string>
+                <key>vertices</key>
+                <string>11 14 4 14 4 3 11 3</string>
+                <key>verticesUV</key>
+                <string>27 26 20 26 20 15 27 15</string>
             </dict>
             <key>walk/0005.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
                 <key>spriteOffset</key>
-                <string>{0,0}</string>
+                <string>{0,-0.5}</string>
                 <key>spriteSize</key>
-                <string>{16,16}</string>
+                <string>{6,11}</string>
                 <key>spriteSourceSize</key>
                 <string>{16,16}</string>
                 <key>textureRect</key>
-                <string>{{64,0},{16,16}}</string>
+                <string>{{37,1},{6,11}}</string>
                 <key>textureRotated</key>
                 <false/>
+                <key>triangles</key>
+                <string>1 2 3 0 1 3</string>
+                <key>vertices</key>
+                <string>11 14 5 14 5 3 11 3</string>
+                <key>verticesUV</key>
+                <string>43 12 37 12 37 1 43 1</string>
             </dict>
             <key>walk/0006.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
                 <key>spriteOffset</key>
-                <string>{0,0}</string>
+                <string>{0.5,0}</string>
                 <key>spriteSize</key>
-                <string>{16,16}</string>
+                <string>{7,12}</string>
                 <key>spriteSourceSize</key>
                 <string>{16,16}</string>
                 <key>textureRect</key>
-                <string>{{80,0},{16,16}}</string>
+                <string>{{11,1},{7,12}}</string>
                 <key>textureRotated</key>
                 <false/>
+                <key>triangles</key>
+                <string>1 2 3 0 1 3</string>
+                <key>vertices</key>
+                <string>12 14 5 14 5 2 12 2</string>
+                <key>verticesUV</key>
+                <string>18 13 11 13 11 1 18 1</string>
             </dict>
             <key>walk/0007.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
                 <key>spriteOffset</key>
-                <string>{0,0}</string>
+                <string>{0,-0.5}</string>
                 <key>spriteSize</key>
-                <string>{16,16}</string>
+                <string>{8,11}</string>
                 <key>spriteSourceSize</key>
                 <string>{16,16}</string>
                 <key>textureRect</key>
-                <string>{{96,0},{16,16}}</string>
+                <string>{{1,1},{8,11}}</string>
                 <key>textureRotated</key>
                 <false/>
+                <key>triangles</key>
+                <string>1 2 3 0 1 3</string>
+                <key>vertices</key>
+                <string>12 14 4 14 4 3 12 3</string>
+                <key>verticesUV</key>
+                <string>9 12 1 12 1 1 9 1</string>
             </dict>
             <key>walk/0008.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
                 <key>spriteOffset</key>
-                <string>{0,0}</string>
+                <string>{-0.5,-0.5}</string>
                 <key>spriteSize</key>
-                <string>{16,16}</string>
+                <string>{7,11}</string>
                 <key>spriteSourceSize</key>
                 <string>{16,16}</string>
                 <key>textureRect</key>
-                <string>{{112,0},{16,16}}</string>
+                <string>{{11,15},{7,11}}</string>
                 <key>textureRotated</key>
                 <false/>
+                <key>triangles</key>
+                <string>1 2 3 0 1 3</string>
+                <key>vertices</key>
+                <string>11 14 4 14 4 3 11 3</string>
+                <key>verticesUV</key>
+                <string>18 26 11 26 11 15 18 15</string>
             </dict>
             <key>walk/0009.png</key>
             <dict>
@@ -131,13 +179,19 @@
                 <key>spriteOffset</key>
                 <string>{0,0}</string>
                 <key>spriteSize</key>
-                <string>{16,16}</string>
+                <string>{6,12}</string>
                 <key>spriteSourceSize</key>
                 <string>{16,16}</string>
                 <key>textureRect</key>
-                <string>{{128,0},{16,16}}</string>
+                <string>{{29,1},{6,12}}</string>
                 <key>textureRotated</key>
                 <false/>
+                <key>triangles</key>
+                <string>1 2 3 0 1 3</string>
+                <key>vertices</key>
+                <string>11 14 5 14 5 2 11 2</string>
+                <key>verticesUV</key>
+                <string>35 13 29 13 29 1 35 1</string>
             </dict>
         </dict>
         <key>metadata</key>
@@ -151,9 +205,9 @@
             <key>realTextureFileName</key>
             <string>lemmings.png</string>
             <key>size</key>
-            <string>{144,16}</string>
+            <string>{44,27}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:c710998a07d23ac45191c00136815f92:a90d14c06eddf291d25f8952f7d98457:88ab09b251cb682b789df6fd09f6f023$</string>
+            <string>$TexturePacker:SmartUpdate:70a0f4c720ce14576386659c8ef9772b:a90d14c06eddf291d25f8952f7d98457:88ab09b251cb682b789df6fd09f6f023$</string>
             <key>textureFileName</key>
             <string>lemmings.png</string>
         </dict>
