--- a/.gitignore
+++ b/.gitignore
@@ -198,3 +198,5 @@ proj.win32/
 /proj.win32/engine/external/ConvertUTF/ext_convertUTF.vcxproj
 /proj.win32/Lemmings.vcxproj.filters
 /proj.win32/Lemmings.vcxproj
+/out/build/x64-Debug/.ninja_deps
+/out/build/x64-Debug/.cmake/api/v1/reply/target-SYNC_RESOURCE-Lemmings-Debug-0032e5bfe0951abf9d08.json
