--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,12 +60,14 @@ list(APPEND GAME_SOURCE
      Classes/MainGame.cpp
      Classes/Lemmings.cpp
      Classes/MapLoader.cpp
+     Classes/PhysicsShapeCache.cpp
      )
 list(APPEND GAME_HEADER
      Classes/AppDelegate.h
      Classes/MainGame.h
      Classes/Lemmings.h
      Classes/MapLoader.h
+     Classes/PhysicsShapeCache.h
      )
 
 if(ANDROID)
