--- a/Resources/sprites/lemmings.plist
+++ b/Resources/sprites/lemmings.plist
@@ -4,194 +4,215 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>walk/0001.png</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{0,-0.5}</string>
-                <key>spriteSize</key>
-                <string>{6,11}</string>
-                <key>spriteSourceSize</key>
-                <string>{16,16}</string>
-                <key>textureRect</key>
-                <string>{{21,12},{6,11}}</string>
-                <key>textureRotated</key>
-                <false/>
-                <key>triangles</key>
-                <string>1 2 3 0 1 3</string>
-                <key>vertices</key>
-                <string>11 14 5 14 5 3 11 3</string>
-                <key>verticesUV</key>
-                <string>27 23 21 23 21 12 27 12</string>
-            </dict>
-            <key>walk/0002.png</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{0.5,0}</string>
-                <key>spriteSize</key>
-                <string>{7,12}</string>
-                <key>spriteSourceSize</key>
-                <string>{16,16}</string>
-                <key>textureRect</key>
-                <string>{{15,0},{7,12}}</string>
-                <key>textureRotated</key>
-                <false/>
-                <key>triangles</key>
-                <string>1 2 3 0 1 3</string>
-                <key>vertices</key>
-                <string>12 14 5 14 5 2 12 2</string>
-                <key>verticesUV</key>
-                <string>22 12 15 12 15 0 22 0</string>
-            </dict>
-            <key>walk/0003.png</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{0,-0.5}</string>
-                <key>spriteSize</key>
-                <string>{8,11}</string>
-                <key>spriteSourceSize</key>
-                <string>{16,16}</string>
-                <key>textureRect</key>
-                <string>{{0,12},{8,11}}</string>
-                <key>textureRotated</key>
-                <false/>
-                <key>triangles</key>
-                <string>1 2 3 0 1 3</string>
-                <key>vertices</key>
-                <string>12 14 4 14 4 3 12 3</string>
-                <key>verticesUV</key>
-                <string>8 23 0 23 0 12 8 12</string>
-            </dict>
-            <key>walk/0004.png</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{-0.5,-0.5}</string>
-                <key>spriteSize</key>
-                <string>{7,11}</string>
-                <key>spriteSourceSize</key>
-                <string>{16,16}</string>
-                <key>textureRect</key>
-                <string>{{28,0},{7,11}}</string>
-                <key>textureRotated</key>
-                <false/>
-                <key>triangles</key>
-                <string>1 2 3 0 1 3</string>
-                <key>vertices</key>
-                <string>11 14 4 14 4 3 11 3</string>
-                <key>verticesUV</key>
-                <string>35 11 28 11 28 0 35 0</string>
-            </dict>
-            <key>walk/0005.png</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{0,-0.5}</string>
-                <key>spriteSize</key>
-                <string>{6,11}</string>
-                <key>spriteSourceSize</key>
-                <string>{16,16}</string>
-                <key>textureRect</key>
-                <string>{{15,12},{6,11}}</string>
-                <key>textureRotated</key>
-                <false/>
-                <key>triangles</key>
-                <string>1 2 3 0 1 3</string>
-                <key>vertices</key>
-                <string>11 14 5 14 5 3 11 3</string>
-                <key>verticesUV</key>
-                <string>21 23 15 23 15 12 21 12</string>
-            </dict>
-            <key>walk/0006.png</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{0.5,0}</string>
-                <key>spriteSize</key>
-                <string>{7,12}</string>
-                <key>spriteSourceSize</key>
-                <string>{16,16}</string>
-                <key>textureRect</key>
-                <string>{{8,0},{7,12}}</string>
-                <key>textureRotated</key>
-                <false/>
-                <key>triangles</key>
-                <string>1 2 3 0 1 3</string>
-                <key>vertices</key>
-                <string>12 14 5 14 5 2 12 2</string>
-                <key>verticesUV</key>
-                <string>15 12 8 12 8 0 15 0</string>
-            </dict>
-            <key>walk/0007.png</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{0,-0.5}</string>
-                <key>spriteSize</key>
-                <string>{8,11}</string>
-                <key>spriteSourceSize</key>
-                <string>{16,16}</string>
-                <key>textureRect</key>
-                <string>{{0,0},{8,11}}</string>
-                <key>textureRotated</key>
-                <false/>
-                <key>triangles</key>
-                <string>1 2 3 0 1 3</string>
-                <key>vertices</key>
-                <string>12 14 4 14 4 3 12 3</string>
-                <key>verticesUV</key>
-                <string>8 11 0 11 0 0 8 0</string>
-            </dict>
-            <key>walk/0008.png</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{-0.5,-0.5}</string>
-                <key>spriteSize</key>
-                <string>{7,11}</string>
-                <key>spriteSourceSize</key>
-                <string>{16,16}</string>
-                <key>textureRect</key>
-                <string>{{8,12},{7,11}}</string>
-                <key>textureRotated</key>
-                <false/>
-                <key>triangles</key>
-                <string>1 2 3 0 1 3</string>
-                <key>vertices</key>
-                <string>11 14 4 14 4 3 11 3</string>
-                <key>verticesUV</key>
-                <string>15 23 8 23 8 12 15 12</string>
-            </dict>
-            <key>walk/0009.png</key>
+            <key>fall-0001.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
                 <key>spriteOffset</key>
                 <string>{0,0}</string>
                 <key>spriteSize</key>
-                <string>{6,12}</string>
+                <string>{10,10}</string>
                 <key>spriteSourceSize</key>
-                <string>{437,710}</string>
+                <string>{10,10}</string>
                 <key>textureRect</key>
-                <string>{{22,0},{6,12}}</string>
+                <string>{{0,0},{10,10}}</string>
                 <key>textureRotated</key>
                 <false/>
-                <key>triangles</key>
-                <string>1 2 3 0 1 3</string>
-                <key>vertices</key>
-                <string>11 14 5 14 5 2 11 2</string>
-                <key>verticesUV</key>
-                <string>28 12 22 12 22 0 28 0</string>
+            </dict>
+            <key>fall-0002.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{10,10}</string>
+                <key>spriteSourceSize</key>
+                <string>{10,10}</string>
+                <key>textureRect</key>
+                <string>{{10,0},{10,10}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>fall-0003.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{10,10}</string>
+                <key>spriteSourceSize</key>
+                <string>{10,10}</string>
+                <key>textureRect</key>
+                <string>{{20,0},{10,10}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>fall-0004.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{10,10}</string>
+                <key>spriteSourceSize</key>
+                <string>{10,10}</string>
+                <key>textureRect</key>
+                <string>{{0,10},{10,10}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>fall-0005.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{10,10}</string>
+                <key>spriteSourceSize</key>
+                <string>{10,10}</string>
+                <key>textureRect</key>
+                <string>{{10,10},{10,10}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>walk-0001.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{10,10}</string>
+                <key>spriteSourceSize</key>
+                <string>{10,10}</string>
+                <key>textureRect</key>
+                <string>{{20,10},{10,10}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>walk-0002.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{10,10}</string>
+                <key>spriteSourceSize</key>
+                <string>{10,10}</string>
+                <key>textureRect</key>
+                <string>{{0,20},{10,10}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>walk-0003.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{10,10}</string>
+                <key>spriteSourceSize</key>
+                <string>{10,10}</string>
+                <key>textureRect</key>
+                <string>{{10,20},{10,10}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>walk-0004.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{10,10}</string>
+                <key>spriteSourceSize</key>
+                <string>{10,10}</string>
+                <key>textureRect</key>
+                <string>{{20,20},{10,10}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>walk-0005.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{10,10}</string>
+                <key>spriteSourceSize</key>
+                <string>{10,10}</string>
+                <key>textureRect</key>
+                <string>{{0,30},{10,10}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>walk-0006.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{10,10}</string>
+                <key>spriteSourceSize</key>
+                <string>{10,10}</string>
+                <key>textureRect</key>
+                <string>{{10,30},{10,10}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>walk-0007.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{10,10}</string>
+                <key>spriteSourceSize</key>
+                <string>{10,10}</string>
+                <key>textureRect</key>
+                <string>{{20,30},{10,10}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>walk-0008.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{10,10}</string>
+                <key>spriteSourceSize</key>
+                <string>{10,10}</string>
+                <key>textureRect</key>
+                <string>{{0,40},{10,10}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>walk-0009.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{10,10}</string>
+                <key>spriteSourceSize</key>
+                <string>{10,10}</string>
+                <key>textureRect</key>
+                <string>{{10,40},{10,10}}</string>
+                <key>textureRotated</key>
+                <false/>
             </dict>
         </dict>
         <key>metadata</key>
@@ -205,9 +226,9 @@
             <key>realTextureFileName</key>
             <string>lemmings.png</string>
             <key>size</key>
-            <string>{35,23}</string>
+            <string>{30,50}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:7ff064f87560b0207b2c71f255e7479a:a90d14c06eddf291d25f8952f7d98457:88ab09b251cb682b789df6fd09f6f023$</string>
+            <string>$TexturePacker:SmartUpdate:35fd4bea8152fb91414ac81bc29beefc:0d7c1166527b792d542f6a24dcc13b3f:88ab09b251cb682b789df6fd09f6f023$</string>
             <key>textureFileName</key>
             <string>lemmings.png</string>
         </dict>
